[package]
name = "memegen"
description = "Fetches memes from an API"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
